--- a/config/app-config.json
+++ b/config/app-config.json
@@ -2,12 +2,13 @@
   "$schema": "./app-config.schema.json",
   "_instructions": "Edit this file with your NON-SECRET API keys. For secrets (Stripe Secret, etc.), use app-secrets.json",
   "firebase": {
-    "apiKey": "AIzaSyA5ShOlRI8493ovNQ4e--utZawgmjc3x0g",
-    "authDomain": "pegasus-2be94.firebaseapp.com",
-    "projectId": "pegasus-2be94",
-    "storageBucket": "pegasus-2be94.firebasestorage.app",
-    "messagingSenderId": "459110381543",
-    "appId": "1:459110381543:android:ba2071e2cea27c5cdfaf42"
+    "apiKey": "AIzaSyDCh3xZfdbWtocmxfjLfrQ_SHUwjjOlQDY",
+    "authDomain": "appy-45444.firebaseapp.com",
+    "projectId": "appy-45444",
+    "storageBucket": "appy-45444.firebasestorage.app",
+    "messagingSenderId": "711315471580",
+    "appId": "1:711315471580:web:f7586fa4c9e44d5176c819",
+    "measurementId": "G-DDQH0VJ7GR"
   },
   "googleMaps": {
     "apiKey": "AIzaSyCTYjoPhLcshZVuEdr-amopUuVMy8lyEmA"
