--- a/config/app-config.json
+++ b/config/app-config.json
@@ -5,7 +5,7 @@
     "apiKey": "AIzaSyDCh3xZfdbWtocmxfjLfrQ_SHUwjjOlQDY",
     "authDomain": "appy-45444.firebaseapp.com",
     "projectId": "appy-45444",
-    "storageBucket": "appy-45444.firebasestorage.app",
+    "storageBucket": "pegasus-2be94.firebasestorage.app",
     "messagingSenderId": "711315471580",
     "appId": "1:711315471580:web:f7586fa4c9e44d5176c819",
     "measurementId": "G-DDQH0VJ7GR"
