feat: Initialize Ionic Admin project with Firebase integration, phone authentication, and a test mode for login.

--- a/Admin/package.json
+++ b/Admin/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my-admin",
+  "name": "my-rider",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve  --port 8100",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,7 +13,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
     "@angular/common": "^17.0.0",
     "@angular/core": "^17.0.0",
     "@angular/fire": "^17.0.0",
@@ -21,11 +20,8 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
-    "@awesome-cordova-plugins/core": "6.3.0",
-    "@awesome-cordova-plugins/onesignal": "6.3.0",
     "@capacitor/android": "^6.0.0",
     "@capacitor/app": "^6.0.0",
-    "@capacitor/assets": "^3.0.0",
     "@capacitor/camera": "^6.0.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/device": "^6.0.0",
@@ -35,21 +31,20 @@
     "@capacitor/keyboard": "^6.0.0",
     "@capacitor/network": "^6.0.0",
     "@capacitor/preferences": "^6.0.0",
-    "@capacitor/push-notifications": "^6.0.0",
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
     "@googlemaps/google-maps-services-js": "3.3.16",
     "@ionic/angular": "^8.0.0",
-    "@ionic/core": "^8.0.0",
-    "@jcesarmobile/ssl-skip": "^0.4.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "chart.js": "^4.4.3",
+    "date-fns": "^2.30.0",
+    "firebase": "^10.0.0",
     "geofire-common": "^6.0.0",
     "ng-otp-input": "^1.8.5",
     "onesignal-cordova-plugin": "^5.2.1",
-    "rxfire": "^6.0.3",
-    "rxjs": "^7.8.0",
+    "rxfire": "^6.1.0",
+    "rxjs": "^7.8.2",
     "swiper": "^11.0.0",
     "tslib": "^2.6.0",
     "zone.js": "~0.14.0"
@@ -67,6 +62,7 @@
     "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^11.0.1",
     "@ionic/cli": "7.2.0",
+    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^18.11.1",
