--- a/Admin/angular.json
+++ b/Admin/angular.json
@@ -31,8 +31,8 @@
               }
             ],
             "styles": [
-              "src/global.scss",
-              "src/theme/variables.scss"
+              "src/theme/variables.scss",
+              "src/global.scss"
             ],
             "scripts": [],
             "vendorChunk": true,
